--- a/FAQs.html
+++ b/FAQs.html
@@ -27,6 +27,14 @@
 
 
 <link rel="icon" type="image/png" href="assets/images/favicon.png">
+<style>
+    .quiver-text {
+        font-family: 'Comic Sans MS', cursive, sans-serif;
+        font-size: 25px;
+        font-weight: bold;
+        color: #fff; /* Dark blue color */
+    }
+</style>
 
 </head>
 <body>
@@ -34,12 +42,12 @@
 <div class="preloader clock text-center">
 <div class="queraLoader">
     <div class="loaderO">
-        <span style="font-family:'Courier New', Courier, monospace">Q</span>
-        <span style="font-family:'Courier New', Courier, monospace">U</span>
-        <span style="font-family:'Courier New', Courier, monospace">I</span>
-        <span style="font-family:'Courier New', Courier, monospace">V</span>
-        <span style="font-family:'Courier New', Courier, monospace">E</span>
-        <span style="font-family:'Courier New', Courier, monospace">R</span>
+        <span ><h1 class="quiver-text">Q</h1></span>
+        <span ><p class="quiver-text">u</p></span>
+        <span ><p class="quiver-text">i</p></span>
+        <span ><p class="quiver-text">v</p></span>
+        <span ><p class="quiver-text">e</p></span>
+        <span ><p class="quiver-text">r</p></span>
     </div>
 </div>
 </div>
@@ -371,81 +379,7 @@
             </div>
             </div>
             </div>
-            <div class="card">
-                <div class="card-header" id="ma_ac_02">
-                <h2 class="mb-0">
-                <button type="button" data-toggle="collapse" data-target="#ma_collapes_02" data-aria-expanded="true" data-aria-controls="ma_collapes_02">
-                <i>2.</i> How can i invest
-                <span></span>
-                </button>
-                </h2>
-                </div>
-                <div id="ma_collapes_02" class="collapse show" aria-labelledby="ma_ac_02" data-parent="#befAccordion01">
-                <div class="card-body">
-                We craft unique digital experiences. With more than 7 years of expertise we design and code clean websites, We are committed to providing our customers
-                </div>
-                </div>
-                </div>
-                <div class="card">
-                    <div class="card-header" id="ma_ac_02">
-                    <h2 class="mb-0">
-                    <button type="button" data-toggle="collapse" data-target="#ma_collapes_02" data-aria-expanded="true" data-aria-controls="ma_collapes_02">
-                    <i>2.</i> What is the minimum amount i can invest
-                    <span></span>
-                    </button>
-                    </h2>
-                    </div>
-                    <div id="ma_collapes_02" class="collapse show" aria-labelledby="ma_ac_02" data-parent="#befAccordion01">
-                    <div class="card-body">
-                    We craft unique digital experiences. With more than 7 years of expertise we design and code clean websites, We are committed to providing our customers
-                    </div>
-                    </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-header" id="ma_ac_02">
-                        <h2 class="mb-0">
-                        <button type="button" data-toggle="collapse" data-target="#ma_collapes_02" data-aria-expanded="true" data-aria-controls="ma_collapes_02">
-                        <i>2.</i> How Would i get paid back from my Investment
-                        <span></span>
-                        </button>
-                        </h2>
-                        </div>
-                        <div id="ma_collapes_02" class="collapse show" aria-labelledby="ma_ac_02" data-parent="#befAccordion01">
-                        <div class="card-body">
-                        We craft unique digital experiences. With more than 7 years of expertise we design and code clean websites, We are committed to providing our customers
-                        </div>
-                        </div>
-                        </div>
-                        <div class="card">
-                            <div class="card-header" id="ma_ac_02">
-                            <h2 class="mb-0">
-                            <button type="button" data-toggle="collapse" data-target="#ma_collapes_02" data-aria-expanded="true" data-aria-controls="ma_collapes_02">
-                            <i>2.</i> what is the minimum days i can invest
-                            <span></span>
-                            </button>
-                            </h2>
-                            </div>
-                            <div id="ma_collapes_02" class="collapse show" aria-labelledby="ma_ac_02" data-parent="#befAccordion01">
-                            <div class="card-body">
-                            We craft unique digital experiences. With more than 7 years of expertise we design and code clean websites, We are committed to providing our customers
-                            </div>
-                            </div>
-                            </div>
-    <div class="card">
-    <div class="card-header" id="ma_ac_03">
-    <h2 class="mb-0">
-    <button class="collapsed" type="button" data-toggle="collapse" data-target="#ma_collapes_03" data-aria-expanded="false" data-aria-controls="ma_collapes_03">
-    <i>3.</i> Wte Have added a new exciting feature in v2.0
-    <span></span>
-    </button>
-    </h2>
-    </div>
-    <div id="ma_collapes_03" class="collapse" aria-labelledby="ma_ac_03" data-parent="#befAccordion01">
-    <div class="card-body">
-    We craft unique digital experiences. With more than 7 years of expertise we design and code clean websites, We are committed to providing our customers
-    </div>
-    </div>
-    </div>
+          
     </div>
     </div>
     <div class="col-md-6">
