--- a/about1.html
+++ b/about1.html
@@ -27,20 +27,27 @@
 
 
 <link rel="icon" type="image/png" href="assets/images/favicon.png">
-
+<style>
+    .quiver-text {
+        font-family: 'Comic Sans MS', cursive, sans-serif;
+        font-size: 25px;
+        font-weight: bold;
+        color: #fff; /* Dark blue color */
+    }
+</style>
 </head>
 <body>
 
 <div class="preloader clock text-center">
 <div class="queraLoader">
     <div class="loaderO">
-        <span style="font-family:'Courier New', Courier, monospace">Q</span>
-        <span style="font-family:'Courier New', Courier, monospace">U</span>
-        <span style="font-family:'Courier New', Courier, monospace">I</span>
-        <span style="font-family:'Courier New', Courier, monospace">V</span>
-        <span style="font-family:'Courier New', Courier, monospace">E</span>
-        <span style="font-family:'Courier New', Courier, monospace">R</span>
-        </div>
+        <span ><h1 class="quiver-text">Q</h1></span>
+        <span ><p class="quiver-text">u</p></span>
+        <span ><p class="quiver-text">i</p></span>
+        <span ><p class="quiver-text">v</p></span>
+        <span ><p class="quiver-text">e</p></span>
+        <span ><p class="quiver-text">r</p></span>
+    </div>
 </div>
 </div>
 
@@ -401,7 +408,7 @@ Our current focus is investing in Micro, Small, and Medium Enterprises (MSMEs), 
     <div class="ctaFooter">
     <div style="height: fit-content; color:aliceblue;" class="ctaboxItem">
     <img src="assets/images/home2/2.png" alt>
-    <i class="twi-headset"></i>
+    <i class="twi-arrow-to-top"></i>
     <h5>Mission</h5>
     <a>To empower businesses with innovative solutions, expert guidance, and strategic insights that drive growth, enhance efficiency, and create lasting value. We are committed to transforming challenges into opportunities and enabling our clients to achieve their full potential.</a>
     </div>
