--- a/contact.html
+++ b/contact.html
@@ -28,18 +28,28 @@
 
 <link rel="icon" type="image/png" href="assets/images/favicon.png">
 
+<style>
+  .quiver-text {
+      font-family: 'Comic Sans MS', cursive, sans-serif;
+      font-size: 25px;
+      font-weight: bold;
+      color: #fff; /* Dark blue color */
+  }
+</style>
+
+
 </head>
 <body>
 
 <div class="preloader clock text-center">
 <div class="queraLoader">
 <div class="loaderO">
-<!-- <span>Q</span>
-<span>U</span>
-<span>I</span>
-<span>V</span>
-<span>E</span>
-<span>R</span> -->
+  <span ><h1 class="quiver-text">Q</h1></span>
+  <span ><p class="quiver-text">u</p></span>
+  <span ><p class="quiver-text">i</p></span>
+  <span ><p class="quiver-text">v</p></span>
+  <span ><p class="quiver-text">e</p></span>
+  <span ><p class="quiver-text">r</p></span>
 </div>
 </div>
 </div>
