--- a/service1.html
+++ b/service1.html
@@ -42,7 +42,7 @@
 }
 
 .interactive-card:hover {
-    background: #003399;
+    background: #ADD8E6;
     color: white;
     transform: translateY(-5px);
 }
@@ -55,12 +55,12 @@
 }
 
 .title {
-    color: #003399;
+    color: #ADD8E6;
     font-weight: bold;
 }
 
 .sub-title {
-    color: #003399;
+    color: #ADD8E6;
     display: flex;
     align-items: center;
     gap: 10px;
@@ -68,12 +68,18 @@
 }
 
 .svg-path {
-    stroke: #003399;
+    stroke: #ADD8E6;
 }
 
 .img-card img {
     width: 80px;
     height: auto;
+}
+.quiver-text {
+    font-family: 'Comic Sans MS', cursive, sans-serif;
+    font-size: 25px;
+    font-weight: bold;
+    color: #fff; /* Dark blue color */
 }
 
 
@@ -87,12 +93,12 @@
 <div class="preloader clock text-center">
 <div class="queraLoader">
     <div class="loaderO">
-        <span style="font-family:'Courier New', Courier, monospace">Q</span>
-        <span style="font-family:'Courier New', Courier, monospace">U</span>
-        <span style="font-family:'Courier New', Courier, monospace">I</span>
-        <span style="font-family:'Courier New', Courier, monospace">V</span>
-        <span style="font-family:'Courier New', Courier, monospace">E</span>
-        <span style="font-family:'Courier New', Courier, monospace">R</span>
+        <span ><h1 class="quiver-text">Q</h1></span>
+        <span ><p class="quiver-text">u</p></span>
+        <span ><p class="quiver-text">i</p></span>
+        <span ><p class="quiver-text">v</p></span>
+        <span ><p class="quiver-text">e</p></span>
+        <span ><p class="quiver-text">r</p></span>
     </div>
 </div>
 </div>
@@ -363,19 +369,19 @@
       <div class="container mt-5">
         <div class="interactive-card">
             <div>
-                <h5 class="title">loan </h5>
+                <h5 class="title">Loan </h5>
                 <p class="text">At Quiver trust, we provide flexible loan options designed to meet your financial needs, whether it’s for personal goals, business expansion, or unexpected expenses. Our transparent processes and competitive rates ensure a smooth borrowing experience for all our clients.</p>
-                <div class="sub-title">
+                <!-- <div class="sub-title">
                     <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M15 10L20 15L15 20" stroke="#003399" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="svg-path"></path>
                         <path d="M4 4V11C4 12.0609 4.42143 13.0783 5.17157 13.8284C5.92172 14.5786 6.93913 15 8 15H20" stroke="#003399" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="svg-path"></path>
                     </svg>
                     <span>Quiver Trust</span>
-                </div>
+                </div> -->
             </div>
-            <div class="img-card">
+            <!-- <div class="img-card">
                 <img src="https://storage.googleapis.com/piggyvestwebsite/piggywebsite2020/PB_18_Small_477bf21be6/PB_18_Small_477bf21be6.png" alt="Savings">
-            </div>
+            </div> -->
         </div>
     </div>
     </div>
@@ -385,17 +391,17 @@
             <div>
                 <h5 class="title">Business advisory</h5>
                 <p class="text">In today’s competitive landscape, having the right guidance is crucial for success. Quiver trust offers comprehensive business advisory services that help organizations achieve operational excellence and sustainable growth.</p>
-                <div class="sub-title">
+                <!-- <div class="sub-title">
                     <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M15 10L20 15L15 20" stroke="#003399" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="svg-path"></path>
                         <path d="M4 4V11C4 12.0609 4.42143 13.0783 5.17157 13.8284C5.92172 14.5786 6.93913 15 8 15H20" stroke="#003399" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="svg-path"></path>
                     </svg>
                     <span>Quiver Trust</span>
-                </div>
+                </div> -->
             </div>
-            <div class="img-card">
+            <!-- <div class="img-card">
                 <img src="https://storage.googleapis.com/piggyvestwebsite/piggywebsite2020/PB_18_Small_477bf21be6/PB_18_Small_477bf21be6.png" alt="Savings">
-            </div>
+            </div> -->
         </div>
     </div>
     </div>
@@ -441,17 +447,17 @@
                         </div>
                         </div>
                   </p>
-                  <div class="sub-title">
+                  <!-- <div class="sub-title">
                       <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M15 10L20 15L15 20" stroke="#003399" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="svg-path"></path>
                           <path d="M4 4V11C4 12.0609 4.42143 13.0783 5.17157 13.8284C5.92172 14.5786 6.93913 15 8 15H20" stroke="#003399" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="svg-path"></path>
                       </svg>
                       <span>Quiver Trust</span>
-                  </div>
+                  </div> -->
               </div>
-              <div class="img-card">
+              <!-- <div class="img-card">
                   <img src="https://storage.googleapis.com/piggyvestwebsite/piggywebsite2020/PB_18_Small_477bf21be6/PB_18_Small_477bf21be6.png" alt="Savings">
-              </div>
+              </div> -->
           </div>
       </div>
       </div>
@@ -479,17 +485,17 @@
                           </div>
                           </div>
                     </p>
-                    <div class="sub-title">
+                    <!-- <div class="sub-title">
                         <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M15 10L20 15L15 20" stroke="#003399" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="svg-path"></path>
                             <path d="M4 4V11C4 12.0609 4.42143 13.0783 5.17157 13.8284C5.92172 14.5786 6.93913 15 8 15H20" stroke="#003399" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="svg-path"></path>
                         </svg>
                         <span>Quiver Trust</span>
-                    </div>
+                    </div> -->
                 </div>
-                <div class="img-card">
+                <!-- <div class="img-card">
                     <img src="https://storage.googleapis.com/piggyvestwebsite/piggywebsite2020/PB_18_Small_477bf21be6/PB_18_Small_477bf21be6.png" alt="Savings">
-                </div>
+                </div> -->
             </div>
       </div>
         </div>
@@ -536,17 +542,17 @@
                           </div>
                           </div>
                     </p>
-                    <div class="sub-title">
+                    <!-- <div class="sub-title">
                         <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M15 10L20 15L15 20" stroke="#003399" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="svg-path"></path>
                             <path d="M4 4V11C4 12.0609 4.42143 13.0783 5.17157 13.8284C5.92172 14.5786 6.93913 15 8 15H20" stroke="#003399" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="svg-path"></path>
                         </svg>
                         <span>Quiver Trust</span>
-                    </div>
+                    </div> -->
                 </div>
-                <div class="img-card">
+                <!-- <div class="img-card">
                     <img src="https://storage.googleapis.com/piggyvestwebsite/piggywebsite2020/PB_18_Small_477bf21be6/PB_18_Small_477bf21be6.png" alt="Savings">
-                </div>
+                </div> -->
             </div>
         </div>
         </div>
@@ -572,17 +578,17 @@
                             </div>
                             </div>
                       </p>
-                      <div class="sub-title">
+                      <!-- <div class="sub-title">
                           <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                               <path d="M15 10L20 15L15 20" stroke="#003399" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="svg-path"></path>
                               <path d="M4 4V11C4 12.0609 4.42143 13.0783 5.17157 13.8284C5.92172 14.5786 6.93913 15 8 15H20" stroke="#003399" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="svg-path"></path>
                           </svg>
                           <span>Quiver Trust</span>
-                      </div>
+                      </div> -->
                   </div>
-                  <div class="img-card">
+                  <!-- <div class="img-card">
                       <img src="https://storage.googleapis.com/piggyvestwebsite/piggywebsite2020/PB_18_Small_477bf21be6/PB_18_Small_477bf21be6.png" alt="Savings">
-                  </div>
+                  </div> -->
               </div>
         </div>
         </div>
