--- a/FAQs.html
+++ b/FAQs.html
@@ -57,16 +57,16 @@
     <div class="container largeContainer">
     <div class="row">
     <div class="col-md-9">
-    <p><i class="bpro-mail-2"></i><a href="https://themewar.com/cdn-cgi/l/email-protection#73000603031c010733161e121a1f5d101c1e">Mail: <span class="__cf_email__" data-cfemail="e99a9c9999869b9da98c84888085c78a8684">O.alao@quivertrustltd.come.ng</span></a></p>
+    <p><i class="bpro-mail-2"></i><a href="https://themewar.com/cdn-cgi/l/email-protection#73000603031c010733161e121a1f5d101c1e">Mail: <span class="__cf_email__" data-cfemail="e99a9c9999869b9da98c84888085c78a8684">info@quivertrustltd.com.ng</span></a></p>
     <p><i class="bpro-phone-ringing"></i><a href="tel:+1245698909">Phone: +2348060875751</a></p>
     </div>
-    <div class="col-md-3">
+    <!-- <div class="col-md-3">
     <div class="topsocial">
     <a href="javascript:void(0);"><i class="twi-facebook-square"></i></a>
     <a href="javascript:void(0);"><i class="twi-pinterest"></i></a>
     <a href="javascript:void(0);"><i class="twi-twitter-square"></i></a>
     </div>
-    </div>
+    </div> -->
     </div>
     </div>
     </section>
@@ -78,7 +78,7 @@
         <div class="col-lg-12">
         <div class="navbar01">
         <div class="logo">
-        <a href="index.html"><img src="assets/images/me/QTLOGO.png" alt="berpo"></a>
+        <a href="index.html"><img src="assets/images/QTLOGO123.png" alt="berpo"></a>
         </div>
         <a href="javascript:void(0)" class="menu_btn"><i class="twi-bars2"></i></a>
         <nav class="mainMenu">
@@ -495,8 +495,8 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
     <div class="row">
     <div class="col-md-6 col-xl-4">
     <div class="aboutWidget">
-    <a href="index.html"><img src="assets/images/QTLOGO123.png" alt></a>
-    <p>Welcome to Quiver trust, a trusted microfinance company dedicated to transforming lives and empowering communities through innovative financial solutions.
+    <a href="index.html"><img src="assets/images/QTLOGO1234.png" alt></a>
+    <p>Welcome to Quiver Trust, a trusted microfinance company dedicated to transforming lives and empowering communities through innovative financial solutions.
     </p>
     </div>
     </div>
@@ -538,7 +538,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
     <div class="widget gallery">
     <!-- <div class="wsubtitle">Contact us</div> -->
     <h3 class="widget_title">Contact us</h3>
-    <div class="abIcon"><i class="twi-map-marker"></i> 9b Ibironke Crescent, Off Okunola Aina Street, OASIC Estate, Maryland, Lagos.</div>
+    <div class="abIcon"><i class="twi-map-marker"></i> 9b Ibironke Crescent  Mende, Maryland, Lagos.</div>
     <div class="abIcon"><i class="twi-envelope"></i><a href="https://themewar.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="580b2d2828372a2c183c3735393136763b3735" style="color: white;">info@quivertrustltd.com.ng</a></div>
     <div class="abIcon"><i class="twi-phone"></i>+2348060875751</div>
     
@@ -551,7 +551,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
     <div class="row">
     <div class="col-lg-4 col-md-5">
     <div class="subTitle">Get In Touch With</div>
-    <h2 class="secTitle">Quiver Trust Limited Company</h2>
+    <h2 class="secTitle quiver-text">Quiver Trust Limited Company</h2>
     </div>
     <div class="col-lg-8 col-md-7">
     <div class="SubsrcribeForm">
