--- a/about1.html
+++ b/about1.html
@@ -77,7 +77,7 @@
         <div class="col-lg-12">
         <div class="navbar01">
         <div class="logo">
-        <a href="index.html"><img src="assets/images/me/QTLOGO.png" alt="berpo"></a>
+        <a href="index.html"><img src="assets/images/QTLOGO123.png" alt="berpo"></a>
         </div>
         <a href="javascript:void(0)" class="menu_btn"><i class="twi-bars2"></i></a>
         <nav class="mainMenu">
@@ -335,7 +335,7 @@ Our current focus is investing in Micro, Small, and Medium Enterprises (MSMEs), 
 </li>
 <li><i class="twi-check-circle"></i>
     Email:<br>
-    o.alao@quivertrustltd.com.ng
+    info@quivertrustltd.com.ng
 </li>
 <li><i class="twi-check-circle"></i>
     Address:<br>
@@ -373,7 +373,7 @@ Our current focus is investing in Micro, Small, and Medium Enterprises (MSMEs), 
 <img src="assets/images/service/4.png" alt>
 </div>
 <h3><a href="single-service.html">Loan</a></h3>
-<p>At Quiver trust, we make the loan application process simple, quick, and hassle-free. Whether you need financial assistance for personal needs, business expansion, or unforeseen expenses, we are here to help you every step of the way.</p>
+<p>At Quiver Trust, we make the loan application process simple, quick, and hassle-free. Whether you need financial assistance for personal needs, business expansion, or unforeseen expenses, we are here to help you every step of the way.</p>
 
 </div>
 </div>
@@ -393,7 +393,7 @@ Our current focus is investing in Micro, Small, and Medium Enterprises (MSMEs), 
 <img src="assets/images/service/6.png" alt>
 </div>
 <h3><a href="single-service.html">Business Advisory</a></h3>
-<p>At Quiver trust, we understand that navigating the complexities of today’s business environment requires expert guidance and innovative solutions. Our business consulting services are designed to help organizations of all sizes overcome challenges, optimize operations, and achieve sustainable growth.</p>
+<p>At Quiver Trust, we understand that navigating the complexities of today’s business environment requires expert guidance and innovative solutions. Our business consulting services are designed to help organizations of all sizes overcome challenges, optimize operations, and achieve sustainable growth.</p>
 
 </div>
 </div>
@@ -564,7 +564,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
     <div class="col-md-6 col-xl-4">
     <div class="aboutWidget">
     <a href="index.html"><img src="assets/images/QTLOGO123.png" alt></a>
-    <p>Welcome to Quiver trust, a trusted microfinance company dedicated to transforming lives and empowering communities through innovative financial solutions.
+    <p>Welcome to Quiver trust, a Trusted microfinance company dedicated to transforming lives and empowering communities through innovative financial solutions.
     </p>
     </div>
     </div>
@@ -606,7 +606,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
     <div class="widget gallery">
     <!-- <div class="wsubtitle">Contact us</div> -->
     <h3 class="widget_title">Contact us</h3>
-    <div class="abIcon"><i class="twi-map-marker"></i> 9b Ibironke Crescent, Off Okunola Aina Street, OASIC Estate, Maryland, Lagos.</div>
+    <div class="abIcon"><i class="twi-map-marker"></i> 9b Ibironke Crescent  Mende, Maryland, Lagos.</div>
     <div class="abIcon"><i class="twi-envelope"></i><a href="https://themewar.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="580b2d2828372a2c183c3735393136763b3735" style="color: white;">info@quivertrustltd.com.ng</a></div>
     <div class="abIcon"><i class="twi-phone"></i>+2348060875751</div>
     
@@ -619,7 +619,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
     <div class="row">
     <div class="col-lg-4 col-md-5">
     <div class="subTitle">Get In Touch With</div>
-    <h2 class="secTitle">Quiver Trust Limited Company</h2>
+    <h2 class="secTitle quiver-text">Quiver Trust Limited Company</h2>
     </div>
     <div class="col-lg-8 col-md-7">
     <div class="SubsrcribeForm">
