--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
     <div class="col-lg-12">
     <div class="navbar01">
     <div class="logo">
-    <a href="index.html"><img src="assets/images/me/QTLOGO.png" alt="berpo"></a>
+    <a href="index.html"><img src="assets/images/QTLOGO123.png" alt="berpo"></a>
     </div>
     <a href="javascript:void(0)" class="menu_btn"><i class="twi-bars2"></i></a>
     <nav class="mainMenu">
@@ -312,7 +312,7 @@
 </div>
 </section>
 
-
+<!-- 
 <section class="mapsSection">
 <div class="container-fluid">
 <div class="row">
@@ -321,7 +321,7 @@
 </iframe>
 </div>
 </div>
-</section>
+</section> -->
 
 
 <section class="contactPage">
@@ -332,7 +332,7 @@
 <div class="row">
 <div class="col-xl-4">
 <h3 class="secTitle">Get In Touch</h3>
-<p class="cnDesc">If you are interested  with us, please get in touch with us.</p>
+<p class="cnDesc">If you are interested, please get in touch with us.</p>
 <div class="icon_box_06">
 <div class="ibMeta">
 <i class="bpro-location"></i>
@@ -352,7 +352,7 @@
 <div class="ibMeta">
 <i class="bpro-mail-3"></i>
 </div>
-<p><a href="https://themewar.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="87cae2ffe8f7eeffe2ebc7e0eae6eeeba9e4e8ea">o.alao@quivertrustltd.com.ng
+<p><a href="https://themewar.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="87cae2ffe8f7eeffe2ebc7e0eae6eeeba9e4e8ea">info@quivertrustltd.com.ng
 </a></p>
 </div>
 </div>
@@ -389,7 +389,7 @@
   <div class="col-md-6 col-xl-4">
   <div class="aboutWidget">
   <a href="index.html"><img src="assets/images/QTLOGO123.png" alt></a>
-  <p>Welcome to Quiver trust, a trusted microfinance company dedicated to transforming lives and empowering communities through innovative financial solutions.
+  <p>Welcome to Quiver Trust, a trusted microfinance company dedicated to transforming lives and empowering communities through innovative financial solutions.
   </p>
   </div>
   </div>
@@ -431,7 +431,7 @@
   <div class="widget gallery">
   <!-- <div class="wsubtitle">Contact us</div> -->
   <h3 class="widget_title">Contact us</h3>
-  <div class="abIcon"><i class="twi-map-marker"></i> 9b Ibironke Crescent, Off Okunola Aina Street, OASIC Estate, Maryland, Lagos.</div>
+  <div class="abIcon"><i class="twi-map-marker"></i> 9b Ibironke Crescent Mende, Maryland, Lagos.</div>
   <div class="abIcon"><i class="twi-envelope"></i><a href="https://themewar.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="580b2d2828372a2c183c3735393136763b3735" style="color: white;">info@quivertrustltd.com.ng</a></div>
   <div class="abIcon"><i class="twi-phone"></i>+2348060875751</div>
   
@@ -444,7 +444,7 @@
   <div class="row">
   <div class="col-lg-4 col-md-5">
   <div class="subTitle">Get In Touch With</div>
-  <h2 class="secTitle">Quiver Trust Limited Company</h2>
+  <h2 class="secTitle quiver-text">Quiver Trust Limited Company</h2>
   </div>
   <div class="col-lg-8 col-md-7">
   <div class="SubsrcribeForm">
