--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 <div class="col-lg-12">
 <div class="navbar01">
 <div class="logo">
-<a href="index.html"><img src="assets/images/me/QTLOGO.png" height="800" width="800" alt="berpo"></a>
+<a href="index.html"><img style=" height: 90px; " src="assets/images/QTLOGO1234.png"  alt="berpo"></a>
 </div>
 <a href="javascript:void(0)" class="menu_btn"><i class="twi-bars2"></i></a>
 <nav class="mainMenu">
@@ -427,7 +427,7 @@
   <img src="assets/images/service/4.png" alt>
   </div>
   <h3><a href="single-service.html">Borrowing</a></h3>
-  <p>invest in your dreams with our lab solutions.</p>
+  <p>invest in your dreams with our Finance solutions.</p>
   
   </div>
   </div>
@@ -1399,7 +1399,7 @@ We craft unique digital experiences. With more than 7 years of expertise we desi
 <div class="col-md-6 col-xl-4">
 <div class="aboutWidget">
 <a href="index.html"><img src="assets/images/QTLOGO123.png" alt></a>
-<p>Welcome to Quiver trust, a trusted microfinance company dedicated to transforming lives and empowering communities through innovative financial solutions.
+<p>Welcome to Quiver Trust, a trusted microfinance company dedicated to transforming lives and empowering communities through innovative financial solutions.
 </p>
 </div>
 </div>
@@ -1441,7 +1441,7 @@ We craft unique digital experiences. With more than 7 years of expertise we desi
 <div class="widget gallery">
 <!-- <div class="wsubtitle">Contact us</div> -->
 <h3 class="widget_title">Contact us</h3>
-<div class="abIcon"><i class="twi-map-marker"></i> 9b Ibironke Crescent, Off Okunola Aina Street, OASIC Estate, Maryland, Lagos.</div>
+<div class="abIcon"><i class="twi-map-marker"></i> 9b Ibironke Crescent  Mende, Maryland, Lagos.</div>
 <div class="abIcon"><i class="twi-envelope"></i><a href="https://themewar.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="580b2d2828372a2c183c3735393136763b3735" style="color: white;">info@quivertrustltd.com.ng</a></div>
 <div class="abIcon"><i class="twi-phone"></i>+2348060875751</div>
 
@@ -1454,7 +1454,7 @@ We craft unique digital experiences. With more than 7 years of expertise we desi
 <div class="row">
 <div class="col-lg-4 col-md-5">
 <div class="subTitle">Get In Touch With</div>
-<h2 class="secTitle">Quiver Trust Limited Company</h2>
+<h2 class="secTitle quiver-text">Quiver Trust Limited Company</h2>
 </div>
 <div class="col-lg-8 col-md-7">
 <div class="SubsrcribeForm">
