--- a/service1.html
+++ b/service1.html
@@ -108,7 +108,7 @@
 <div class="container largeContainer">
 <div class="row">
 <div class="col-md-9">
-<p><i class="bpro-mail-2"></i><a href="https://themewar.com/cdn-cgi/l/email-protection#b5c6c0c5c5dac7c1f5d0d8d4dcd99bd6dad8">Mail: <span class="__cf_email__" data-cfemail="b5c6c0c5c5dac7c1f5d0d8d4dcd99bd6dad8">o.alao@quivertrustltd.com.ng
+<p><i class="bpro-mail-2"></i><a href="https://themewar.com/cdn-cgi/l/email-protection#b5c6c0c5c5dac7c1f5d0d8d4dcd99bd6dad8">Mail: <span class="__cf_email__" data-cfemail="b5c6c0c5c5dac7c1f5d0d8d4dcd99bd6dad8">info@quivertrustltd.com.ng
 </span></a></p>
 <p><i class="bpro-phone-ringing"></i><a href="tel:+1245698909">Office: +2347025251599</a></p>
 </div>
@@ -130,7 +130,7 @@
     <div class="col-lg-12">
     <div class="navbar01">
     <div class="logo">
-    <a href="index.html"><img src="assets/images/me/QTLOGO.png" alt="berpo"></a>
+    <a href="index.html"><img src="assets/images/QTLOGO123.png" alt="berpo"></a>
     </div>
     <a href="javascript:void(0)" class="menu_btn"><i class="twi-bars2"></i></a>
     <nav class="mainMenu">
@@ -370,7 +370,7 @@
         <div class="interactive-card">
             <div>
                 <h5 class="title">Loan </h5>
-                <p class="text">At Quiver trust, we provide flexible loan options designed to meet your financial needs, whether it’s for personal goals, business expansion, or unexpected expenses. Our transparent processes and competitive rates ensure a smooth borrowing experience for all our clients.</p>
+                <p class="text">At Quiver Trust, we provide flexible loan options designed to meet your financial needs, whether it’s for personal goals, business expansion, or unexpected expenses. Our transparent processes and competitive rates ensure a smooth borrowing experience for all our clients.</p>
                 <!-- <div class="sub-title">
                     <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M15 10L20 15L15 20" stroke="#003399" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="svg-path"></path>
@@ -390,7 +390,7 @@
         <div class="interactive-card">
             <div>
                 <h5 class="title">Business advisory</h5>
-                <p class="text">In today’s competitive landscape, having the right guidance is crucial for success. Quiver trust offers comprehensive business advisory services that help organizations achieve operational excellence and sustainable growth.</p>
+                <p class="text">At Quiver Trust, we understand that navigating the complexities of today’s business environment requires expert guidance and innovative solutions. Our business consulting services are designed to help organizations of all sizes overcome challenges, optimize operations, and achieve sustainable growth.</p>
                 <!-- <div class="sub-title">
                     <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M15 10L20 15L15 20" stroke="#003399" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="svg-path"></path>
@@ -868,7 +868,7 @@
     <div class="col-md-6 col-xl-4">
     <div class="aboutWidget">
     <a href="index.html"><img src="assets/images/QTLOGO123.png" alt></a>
-    <p>Welcome to Quiver trust, a trusted microfinance company dedicated to transforming lives and empowering communities through innovative financial solutions.
+    <p>Welcome to Quiver Trust, a trusted microfinance company dedicated to transforming lives and empowering communities through innovative financial solutions.
     </p>
     </div>
     </div>
@@ -910,7 +910,7 @@
     <div class="widget gallery">
     <!-- <div class="wsubtitle">Contact us</div> -->
     <h3 class="widget_title">Contact us</h3>
-    <div class="abIcon"><i class="twi-map-marker"></i> 9b Ibironke Crescent, Off Okunola Aina Street, OASIC Estate, Maryland, Lagos.</div>
+    <div class="abIcon"><i class="twi-map-marker"></i> 9b Ibironke Crescent  Mende, Maryland, Lagos.</div>
     <div class="abIcon"><i class="twi-envelope"></i><a href="https://themewar.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="580b2d2828372a2c183c3735393136763b3735" style="color: white;">info@quivertrustltd.com.ng</a></div>
     <div class="abIcon"><i class="twi-phone"></i>+2348060875751</div>
     
@@ -923,7 +923,7 @@
     <div class="row">
     <div class="col-lg-4 col-md-5">
     <div class="subTitle">Get In Touch With</div>
-    <h2 class="secTitle">Quiver Trust Limited Company</h2>
+    <h2 class="secTitle quiver-text">Quiver Trust Limited Company</h2>
     </div>
     <div class="col-lg-8 col-md-7">
     <div class="SubsrcribeForm">
